k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: prernachourey3/nodejs-crud-project:0e8bb5a68a336678ff27ce63cd33bec9aff0b3ca
        ports:
        - containerPort: 5000
